# ROS_CAR_PROJECT

./: README.md
dm_h3510_ros_ws/cpp/src/gimbal_tracker/: README.md
dm_h3510_ros_ws/docs/: troubleshooting.md
dm_h3510_ros_ws/python/: README.md
dm_h3510_ros_ws/scripts/board/: build_cpp_ros.sh
docs/: RK3576三路混合摄像头YOLO识别计划书.md  RK3576云台与YOLO联调计划书.md
drone_pt_detector/: README.md
firmware/: README.md
firmware/BATTERY/: battery_task.c  battery_task.h
firmware/BOARD/: Board_Init.c  Board_Init.h
firmware/BSP/: bsp_encoder.c  bsp_encoder.h  bsp_estop.c  bsp_estop.h  bsp_motor.c  bsp_motor.h  bsp_oled.c  bsp_oled.h  bsp_uart.c  bsp_uart.h  bsp_usb.c  bsp_usb.h  usb_conf.h  usbh_conf.h
firmware/DISPLAY/: display_task.c  display_task.h
firmware/DRIVE/: drive_task.c  drive_task.h
firmware/INPUT/: ps2_task.c  ps2_task.h
firmware/ROS/: ros_comm_task.c  ros_comm_task.h  ros_frame.c  ros_frame.h
firmware/SYSTEM/: delay.c  delay.h
firmware/USER/: FreeRTOSConfig.h  main.c  my_freertos.c  my_freertos.h  state.c  state.h  stm32f4xx.h  stm32f4xx_it.c  system_stm32f4xx.c
hardware/: README.md
robot_ws/src/RK3588/: README.md
robot_ws/src/RK3588/robot_cartographer/: CMakeLists.txt  package.xml
robot_ws/src/RK3588/robot_cartographer/config/: carto_ekf.yaml  robot_2d.lua
robot_ws/src/RK3588/robot_cartographer/launch/: cartographer_launch.py
robot_ws/src/RK3588/robot_cartographer/map/: fishbot_map.yaml
robot_ws/src/RK3588/robot_low_connect/: CMakeLists.txt  package.xml
robot_ws/src/RK3588/robot_low_connect/config/: pointcloud_to_2d.yaml
robot_ws/src/RK3588/robot_low_connect/include/robot_low_connect/: G60_node.hpp  H30_node.hpp  serial.hpp  serial_port_wrapper.hpp
robot_ws/src/RK3588/robot_low_connect/launch/: rs_start.py
robot_ws/src/RK3588/robot_low_connect/msg/: Gpgga.msg
robot_ws/src/RK3588/robot_low_connect/src/: H30_node.cpp  robot_info_transform.cpp
robot_ws/src/RK3588/robot_navigation2/: package.xml
robot_ws/src/RK3588/robot_navigation2/launch/: navigation2_launch.py
robot_ws/src/RK3588/robot_navigation2/maps/: my_map.yaml
robot_ws/src/RK3588/rslidar_sdk/: CMakeLists.txt
robot_ws/src/RK3588/rslidar_sdk/config/: config.yaml
robot_ws/src/RK3588/rslidar_sdk/rviz/: rviz2.rviz
robot_ws/src/RK3588/yolov11_rknn_ros2/: package.xml
robot_ws/src/RK3588/yolov11_rknn_ros2/yolov11_rknn_ros2/: __init__.py  infer.py
robot_ws/src/RK3588/yolov11_rknn_ros2/yolov11_rknn_ros2/func/: __init__.py  func_yolov8_optimize.py
robot_ws/src/RK3588/yolov11_rknn_ros2/yolov11_rknn_ros2/rknnpool/: rknnpool_ld.py
robot_ws/src/rk3576/dm_h3510_ros_ws/: README.md
robot_ws/src/rk3576/dm_h3510_ros_ws/docs/: yolo_gimbal_quickstart.md
robot_ws/src/rk3576/docs/: workspace-map.md
robot_ws/src/robot_cartographer/map/: fishbot_map.pgm
robot_ws/src/robot_low_connect/config/: robot_param.yaml
robot_ws/src/robot_low_connect/launch/: robot_start_launch.py
robot_ws/src/robot_low_connect/src/: G60_node.cpp
robot_ws/src/robot_low_connect/urdf/: robot.urdf
robot_ws/src/robot_navigation2/: CMakeLists.txt
robot_ws/src/robot_navigation2/config/: ekf_nav.yaml
robot_ws/src/robot_navigation2/maps/: my_map.pgm
robot_ws/src/robot_navigation2/param/: robot_nav2.yaml
robot_ws/src/yolov11_rknn_ros2/: setup.cfg  setup.py
robot_ws/src/yolov11_rknn_ros2/config/: yolov11_rknn.yaml
robot_ws/src/yolov11_rknn_ros2/launch/: yolov11_rknn.launch.py
robot_ws/src/yolov11_rknn_ros2/resource/: yolov11_rknn_ros2
robot_ws/src/yolov11_rknn_ros2/yolov11_rknn_ros2/: detector_node.py  postprocess.py
(+8 files in other folders)
