<?xml version="1.0"?>
<package format="3">
  <name>yolov11_rknn_ros2</name>
  <version>0.1.0</version>
  <description>ROS 2 RKNN detector node for a converted YOLOv11n model.</description>

  <maintainer email="codex@example.com">Codex</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
